# v2t

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  config.example.json  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.claude/scripts/: code-check.py
.github/workflows/: ci.yml
app/: cli.py  config.py  database.py  models.py  web.py
app/services/: auth.py  email.py  gitcode_ai.py  transcribe.py  video_downloader.py  xiazaitool.py
app/static/: index.html
app/static/assets/: index-CY12fMIQ.js  index-Qo3OntX_.css
apps/web/: eslint.config.ts  index.html  package.json  vite.config.ts
apps/web/src/: App.vue
backend/: .env.example  pyproject.toml  pytest.ini
backend/app/: cli.py  config.py  deps.py  logging_config.py  main.py  web.py  worker.py
backend/app/models/: __init__.py  entities.py  enums.py  schemas.py
backend/app/routers/: __init__.py  bilibili.py  desktop.py  diagnostics.py  process.py  prompts.py  resource.py  stream.py  task.py  workspace.py
backend/app/services/: bilibili_meta.py  dashscope_stt.py  deepseek.py  gitcode_ai.py  llm.py  podcast_tts.py  streaming_pipeline.py  transcribe.py  vad.py  video_downloader.py  xiazaitool.py
backend/app/services/downloader/: __init__.py  base.py  xiazaitool.py  ytdlp.py
backend/app/services/stt/: __init__.py  _pool.py  base.py  dashscope.py  router.py  whisper.py
backend/app/state/: __init__.py  memory_store.py
backend/app/storage/: __init__.py  file_storage.py  local_file.py  memory_metadata.py  metadata_store.py  mongo_metadata.py  redis_store.py
backend/app/tasks/: __init__.py  podcast_task.py  text_task.py  video_task.py  workspace_task.py
backend/app/utils/: __init__.py  hash.py  response.py  sse.py  url_hash.py
backend/tests/: conftest.py  test_deepseek.py  test_downloader.py  test_llm.py  test_podcast_tts.py  test_storage.py  test_transcribe.py
backend/tests/integration/: test_mongo.py  test_process_workspace_smoke.py
backend/tests/unit/: test_cleanup.py  test_local_file.py  test_memory_metadata.py  test_podcast_tts.py  test_streaming_pipeline.py  test_stt_pool.py  test_stt_router.py  test_url_hash.py
deploy/: nginx-docker.conf  nginx-local.conf  v2t-worker.service  v2t.service
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
frontend/src/api/: audio.js  download.js  task.js  task.ts  transcript.js  video.js
frontend/src/components/: AppFooter.vue  AppHeader.vue  AppLogo.vue  AudioSection.vue  ContentSection.vue  ContentTabs.vue  GlobalToast.vue  InitialPage.vue  MarkdownContent.vue  MediaDownload.vue  PodcastPlayer.vue  ProgressBar.vue  ResultPage.vue  SideNavigation.vue  SubtitleSection.vue  SubtitleUpload.vue  VideoSection.vue
frontend/src/composables/: useMarkdown.ts  useNavItems.ts  useSSE.js  useTask.js  useTaskPolling.js
frontend/src/machines/: contentMachine.ts  index.ts  workspaceMachine.ts
frontend/src/pages/: ResultPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: task.js  task.ts
tests/: test_database.py  test_downloader.py  test_gitcode.py  test_transcribe.py  test_xiazaitool.py
(+27 files in other folders)
