[project]
name = "v2t"
version = "0.1.0"
description = "视频摘要工具 - 下载视频、转写字幕、AI 处理"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "typer>=0.20.0",
    "rich>=14.0.0",
    "better-ffmpeg-progress>=4.0.0",
]

[project.scripts]
v2t = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
