[project]
name = "v2t"
version = "0.1.0"
description = "视频摘要工具 - 下载视频、转写字幕、AI 处理"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "typer>=0.20.0",
    "rich>=14.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
v2t = "app.cli:main"
v2t-web = "app.web:run_server"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "B904", "E402", "SIM105", "SIM201"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
