[project]
name = "v2t"
version = "0.1.0"
description = "Gist · 视频预审工具 - 下载视频、转写字幕、AI 生成要点摘要"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "anthropic>=0.39.0",
    "rich>=14.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "aiolimiter>=1.1.0",
    "pedalboard>=0.9.0",
    "pathvalidate>=3.0.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "arq>=0.26.1",
    "dashscope>=1.20.0",
    "yt-dlp>=2025.1.0",
    "silero-vad>=6.2.1",
    "onnxruntime>=1.25.0",
    # torch / torchaudio 显式声明为 direct deps，让 [tool.uv.sources] 路由到 CPU index 生效
    # （否则作为 silero-vad 的 transitive 依赖会从 PyPI 拉 CUDA 版本，多 ~1.5GB）
    "torch>=2.0",
    "torchaudio>=2.0",
]

[project.scripts]
v2t-web = "app.main:run_server"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "B904", "E402", "SIM105", "SIM201"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# silero-vad 间接依赖 torch + torchaudio。容器里只跑 ONNX 后端 (CPU)，不用 CUDA，
# 锁到 PyTorch CPU-only wheel 镜像，避免拉 ~1.5GB 的 nvidia-cu13 包套件。
# 阿里云 mirrors.aliyun.com/pytorch-wheels 是 download.pytorch.org/whl 的真 mirror
# （非 reverse proxy），国内带宽 ~6MB/s，比 pytorch.org 直拉快 4 倍以上。
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirrors.aliyun.com/pytorch-wheels/cpu/"
explicit = true
format = "flat"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
